Implementacion del servicio de asignacion de imagenes